[NOTIFIER-4] Add route for sending proposal emails
