# internal/handler/http/api/v1/register_user.go
@@ -9,7 +9,7 @@ import (
 	http_ "notify/internal/handler/http"
 )
 
-type resp struct {
+type respRegisterUser struct {
 	User  e.UserCommonInfo `json:"user"`
 	Token e.JWTString      `json:"jwt"`
 }
@@ -20,13 +20,13 @@ type resp struct {
 // @Tags v1
 // @Accept application/json
 // @Produce application/json
-// @Param user body e.ReqWithAuth[e.User] true "Auth data and User details"
-// @Success 200 {object} http_.Resp[resp]
+// @Param data body e.ReqWithApiToken[e.User] true "Auth data and User details"
+// @Success 200 {object} http_.Resp[respRegisterUser]
 // @Failure 400 {object} http_.RespErr
 // @Failure 401 {object} http_.RespErr
 // @Router /v1/register_user/ [post]
 func (h *Handler) RegisterUser(c *gin.Context) {
-	var request e.ReqWithAuth[e.User]
+	var request e.ReqWithApiToken[e.User]
 	err := c.BindJSON(&request)
 	if err != nil {
 		c.JSON(http.StatusBadRequest, http_.RespValidationErr(err))
@@ -37,7 +37,7 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 	ctx := context.Background()
 	auth, err := h.uc.AuthUserApiToken(ctx, request.Auth.Login, request.Auth.Password)
 	if err != nil {
-		c.JSON(http.StatusOK, http_.RespAuthErr(err))
+		c.JSON(http.StatusUnauthorized, http_.RespAuthErr(err))
 		return
 	}
 
@@ -56,6 +56,6 @@ func (h *Handler) RegisterUser(c *gin.Context) {
 		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
 		return
 	}
-	resp := http_.Resp[resp]{Message: "Success", Result: resp{User: user.Info, Token: *token}}
+	resp := http_.Resp[respRegisterUser]{Message: "Success", Result: respRegisterUser{User: user.Info, Token: *token}}
 	c.JSON(http.StatusOK, resp)
 }
